tests/fsharp/typecheck/sigs/neg96.bsl

neg96.fs(11,9,11,21): typecheck error FS1133: No constructors are available for the type 'StructRecord'

neg96.fs(18,10,18,11): typecheck error FS0039: The type 'X' is not defined.
